😎 added a jest resolver for .js imports

--- a/src/html-tests/index.html
+++ b/src/html-tests/index.html
@@ -7,7 +7,7 @@
     <title>Main</title>
 </head>
 <body>
-
-    <script type="module" src="main.js"></script>
+    JUST RUN WITH LIVESERVER, and watch the console
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
