feat: implemented PPM download in html demo

--- a/src/html-tests/index.html
+++ b/src/html-tests/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     JUST RUN WITH LIVESERVER, and watch the console
+    <canvas width="500" height="500" class="canvas"></canvas>
+    <button class="download">Download PPM</button>
     <script type="module" src="./main.js"></script>
 </body>
 </html>
